--- a/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
+++ b/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
@@ -328,7 +328,7 @@
                             <p-autoComplete 
                                 formControlName="teacher"
                                 [suggestions]="filteredItems" 
-                                (completeMethod)="search($event)" 
+                                (completeMethod)="searchTeachers($event)" 
                                 field="fullName" 
                                 [multiple]="true" />
                         </span>
