--- a/src/app/demo/components/cross-components/user-selection/user-selection.component.html
+++ b/src/app/demo/components/cross-components/user-selection/user-selection.component.html
@@ -21,31 +21,25 @@
   </div>
 </ng-template>
 <ng-template #studentListSkeleton>
-  <div class="grid p-fluid mt-3">
+  <div class="grid p-fluid">
       <div *ngIf="!studentsList.length" class="field col-12">
-          <p-skeleton height="2rem" styleClass="mb-2" />
+          <p-skeleton height="3rem" styleClass="mb-2" />
       </div>
   </div>
 </ng-template>
 <ng-template #studentList>
-  <div class="grid p-fluid mt-3">
+  <div class="grid p-fluid">
       <div *ngIf="studentsList.length" class="field col-12">
           <span class="p-float-label">
-            <form [formGroup]="studentForm">
+            <form [formGroup]="userForm">
+              <span class="p-fluid">
                 <p-autoComplete
-                id="studentOne"
-                formControlName="studentFormControl"
-                [suggestions]="filteredStudents"
-                (completeMethod)="filterStudents($event)"
-                field="name">
-                <ng-template let-student pTemplate="item">
-                    <div class="flex align-items-center gap-2">
-
-                        <div>{{ student.name + ' ' +
-                            student.surnames}}</div>
-                    </div>
-                </ng-template>
-            </p-autoComplete>
+                  formControlName="userFormControl"
+                  [suggestions]="filteredItems"
+                  (completeMethod)="search($event)"
+                  field="fullName"
+                  [multiple]="true" />
+              </span>
             </form>
               
               <!--<label for="studentOne">Ingrese el nombre del
