--- a/src/app/demo/components/pages/hotbed-tracking/hotbed-tracking.component.html
+++ b/src/app/demo/components/pages/hotbed-tracking/hotbed-tracking.component.html
@@ -12,6 +12,7 @@
                             icon="pi pi-plus"
                             class="p-button-success mr-2"
                             (click)="goToRegisterHotbed()"></button>
+                            <button (click)="test()">aaaaaaaa</button>
                     </div>
                 </ng-template>
             </p-toolbar>
@@ -132,4 +133,106 @@
         </div>
 
     </div>
+</div>
+
+<div *ngIf="viewDetail && !viewHistory" class="grid">
+    <div class="col-12">
+        <div class="card">
+            <div class="grid d-flex col-12">
+                <div class="mr-auto p-2">
+                    <p-button (click)="backList()" label="Regresar"
+                        [outlined]="true"
+                        icon="pi pi-angle-left" iconPos="left" />
+                    <p-button *ngIf="!showEdit && inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="ml-3"
+                        (click)="showEdition()"
+                        label="Editar"
+                        icon="pi pi-pencil" iconPos="left" />
+                    <p-button *ngIf="showEdit && inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="ml-3"
+                        (click)="cancelEdition()"
+                        label="Cancelar edición"
+                        icon="pi pi-times" iconPos="right" />
+                    <p-button *ngIf="showEdit && inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="ml-3"
+                        (click)="saveEdition()"
+                        label="Guardar cambios"
+                        icon="pi pi-save" iconPos="left" />
+                </div>
+                <div class="p-2">
+                    <p-button
+                        *ngIf="inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'"
+                        label="Cancelar inscripción"
+                        [outlined]="true"
+                        class="mr-3"
+                        icon="pi pi-times" iconPos="left"
+                        severity="danger" (click)="goToCancelation()" />
+                    <p-button
+                        *ngIf="inscriptionState === 'Inscrito' || inscriptionState === 'Observado'"
+                        label="Pasar a revisión" [outlined]="true"
+                        icon="pi pi-angle-right" iconPos="right"
+                        severity="info" (click)="goToReview()" />
+                    <p-button *ngIf="inscriptionState === 'En revisión'"
+                        label="Observado" [outlined]="true"
+                        icon="pi pi-exclamation-circle" iconPos="left"
+                        severity="warning" (click)="goToObserved()" />
+                    <p-button
+                        *ngIf="inscriptionState === 'En revisión'"
+                        class="ml-3"
+                        label="Aprobado" [outlined]="true"
+                        icon="pi pi-angle-right" iconPos="right"
+                        severity="success" (click)="goToApprove()" />
+                </div>
+            </div>
+            <div class="card flex justify-content-center col-12">
+                <h4 class="font-bold">Título:
+                    {{articleSelected.title}}
+                </h4>
+            </div>
+            <div *ngIf="!showEdit" class="grid col-12">
+                <div class="col-12">
+                    <p-button (click)="viewHistory=true" label="Ver histórico"
+                    icon="pi pi-book" iconPos="left" />
+                </div>
+                <div class="col-3"><p class="font-bold">Escuala
+                        profesional:</p><p>{{articleSelected.title}}</p></div>
+                <div class="col-3"><p class="font-bold">Nro de
+                        oficio:</p><p>{{articleSelected.title}}</p></div>
+                <div class="col-3"><p class="font-bold">Nro de
+                        resolución:</p><p>{{articleSelected.title}}</p></div>
+            </div>
+            <div class="ml-2 mr-2 separator"></div>
+            <app-comments class="w-full"></app-comments>
+            
+        </div>
+    </div>
+</div>
+
+<div *ngIf="viewHistory" class="card">
+    <div class="grid d-flex col-12">
+        <div class="mr-auto p-2">
+    <p-button (click)="viewHistory=false" label="Regresar"
+                        [outlined]="true"
+                        icon="pi pi-angle-left" iconPos="left" />
+        </div>
+    </div>
+    <div class="card flex justify-content-center col-12">
+        <h4 class="font-bold">Título:
+            {{articleSelected.title}}
+        </h4>
+    </div>
+    <p-timeline [value]="events" align="alternate" styleClass="customized-timeline">
+        <ng-template pTemplate="marker" let-event>
+            <span 
+                class="flex w-2rem h-2rem align-items-center justify-content-center text-white border-circle z-1 shadow-1" 
+                [style]="{ 'background-color': event.color }">
+                    <i [class]="event.icon"></i>
+            </span>
+        </ng-template>
+        <ng-template pTemplate="content" let-event>
+            <p-card [header]="event.status" [subheader]="event.date" >
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
+                    neque quas!
+                </p>
+            </p-card>
+        </ng-template>
+    </p-timeline>
 </div>
