--- a/src/app/demo/components/cross-components/loader/loader.component.html
+++ b/src/app/demo/components/cross-components/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="isLoading" class="loader-overlay">
+<div *ngIf="isLoading" @fade class="loader-overlay">
   <div class="loader"></div>
 </div>
