--- a/src/app/layout/app.footer.component.html
+++ b/src/app/layout/app.footer.component.html
@@ -1,5 +1,5 @@
 <div class="layout-footer">
-    <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Logo" height="20" class="mr-2"/>
-    by
-    <span class="font-medium ml-2">PrimeNG</span>
+    <img src="assets/img/{{layoutService.config().colorScheme === 'light' ? 'ico-uch' : 'ico-uch-dark'}}.png" alt="Logo" height="20" class="mr-2"/>
+    <b style="font-weight: 900;">UCH</b>
+    <p style="padding-left: 5px; font-size: x-small;">by Cesar J. and Gary V.</p>
 </div>
