--- a/src/app/demo/components/cross-components/card-error/card-error.component.scss
+++ b/src/app/demo/components/cross-components/card-error/card-error.component.scss
@@ -4,7 +4,7 @@
     padding: 2rem;
     //border: 1px solid #f5c6cb;
     border-radius: 8px;
-    background-color: #ffffff;
+    background-color: transparent;
     //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
