--- a/src/app/demo/components/pages/users/users.component.html
+++ b/src/app/demo/components/pages/users/users.component.html
@@ -40,14 +40,7 @@
                 </ng-template>
             </div>
             <ng-template #userListError>
-                <div class="p-d-flex p-jc-center p-ai-center text-align-center">
-                    <div class="p-text-center error-content">
-                      
-                      <h1 class="error-title"><i class="pi pi-times-circle error-icon"></i> Ups :(</h1>
-                      <p class="error-message">Se produjo un error al cargar la lista de usuarios. Por favor, inténtelo de nuevo más tarde.</p>
-                      <button pButton type="button" label="Reintentar" icon="pi pi-refresh" (click)="callGetUserList()" class="p-button-danger"></button>
-                    </div>
-                  </div>
+                <app-card-error [message]="messageError" (reload)="handleReload($event)"></app-card-error>
             </ng-template>
             <ng-template #userListSkeleton>
                 <div class="card">
