--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,8 +1,8 @@
 <div class="layout-topbar">
-    <a class="layout-topbar-logo" routerLink="">
+    <a class="layout-topbar-logo">
         <!--<img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="logo">-->
         <img src="assets/img/{{layoutService.config().colorScheme === 'light' ? 'logo-uch' : 'logo-uch-dark'}}.png"alt="logo">
-        <span>UDI</span>
+        <b style="font-weight: 800;">UDI</b>
     </a>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
