--- a/src/app/demo/components/pages/users/users.component.html
+++ b/src/app/demo/components/pages/users/users.component.html
@@ -1,5 +1,6 @@
 <div class="grid">
     <div class="col-12">
+        <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
         <div class="card px-6 py-6">
             <p-toast></p-toast>
             <p-toolbar styleClass="mb-4">
@@ -10,7 +11,7 @@
                             pRipple
                             label="Nuevo usuario"
                             icon="pi pi-plus"
-                            class="p-button-success mr-2"
+                            class="mr-2"
                             (click)="openNew()"></button>
                     </div>
                 </ng-template>
@@ -43,7 +44,8 @@
                 <app-card-error [message]="messageError" (reload)="handleReload($event)"></app-card-error>
             </ng-template>
             <ng-template #userListSkeleton>
-                <div class="card">
+                <app-skeleton-table [columnTitles]="columnTitles" [skeletonCount]="skeletonRows"></app-skeleton-table>
+                <!-- <div class="card">
                     <p-table [value]="skeletonRows" responsiveLayout="scroll">
                         <ng-template pTemplate="header">
                             <tr>
@@ -66,7 +68,7 @@
                             </tr>
                         </ng-template>
                     </p-table>
-                </div>
+                </div> -->
             </ng-template>
             <ng-template #userList>
                 <div class="card">
@@ -93,9 +95,6 @@
                         </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th style="width: 3rem">
-                                    <p-tableheadercheckbox></p-tableheadercheckbox>
-                                </th>
                                 <th pSortableColumn="code">Código <p-sortIcon
                                         field="code"></p-sortIcon></th>
                                 <th pSortableColumn="name">Nombres completos
@@ -110,10 +109,6 @@
                         </ng-template>
                         <ng-template pTemplate="body" let-data>
                             <tr>
-                                <td>
-                                    <p-tableCheckbox
-                                        [value]="data"></p-tableCheckbox>
-                                </td>
                                 <td style="width:14%; min-width:10rem;"><span
                                         class="p-column-title">codigo</span>
                                     {{data.code}}
